# agentmail-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: smoke.rs  webhook.rs
src/: client.rs  lib.rs  types.rs  util.rs  verify.rs
src/client/: agent.rs  api_keys.rs  attachments.rs  auth.rs  domains.rs  drafts.rs  inbox_events.rs  inboxes.rs  lists.rs  messages.rs  metrics.rs  mod.rs  organizations.rs  pods.rs  scope.rs  thread_search.rs  threads.rs  webhooks.rs
src/types/: agent.rs  api_keys.rs  attachments.rs  auth.rs  domains.rs  drafts.rs  inbox_events.rs  inbox_update.rs  inboxes.rs  lists.rs  messages.rs  metrics.rs  mod.rs  organizations.rs  pods.rs  thread_search.rs  threads.rs  webhooks.rs
tests/: http.rs
tests/http/: account.rs  attachments.rs  auth.rs  common.rs  core.rs  domains.rs  drafts.rs  lists.rs  main.rs  messages.rs  messages_parity.rs  metrics.rs  pods.rs  retry.rs  threads.rs  webhooks.rs
