[package]
name = "agentmail-rs"
version = "0.3.0"
edition = "2024"
# Floor set by edition 2024 (1.85) and icu/idna transitive deps (1.86).
rust-version = "1.86"
authors = ["Jacob Heider <jhheider@gmail.com>"]
description = "Unofficial typed Rust client for AgentMail (agentmail.to), the email API for agents."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jhheider/agentmail-rs"
homepage = "https://github.com/jhheider/agentmail-rs"
documentation = "https://docs.rs/agentmail-rs"
readme = "README.md"
keywords = ["email", "agentmail", "api", "async", "agents"]
categories = ["api-bindings", "email", "asynchronous", "web-programming"]

# Published as agentmail-rs (the bare `agentmail` name is taken on crates.io by
# an unrelated project), but imported as `agentmail`.
[lib]
name = "agentmail"

[features]
default = ["retries"]
# Automatic retries with exponential backoff (RetryPolicy). On by default to
# match the official SDKs; gates the direct tokio dependency, so
# `default-features = false` drops it and every request makes a single attempt.
retries = ["dep:tokio"]
# Svix webhook-signature verification (verify_webhook_signature). Off by
# default so the base client needs no crypto beyond rustls's ring provider;
# enabling it adds a direct ring + base64 dependency.
webhook-verify = ["dep:ring", "dep:base64"]

[dependencies]
# rustls with the ring provider, no aws-lc-rs / cmake C build. The client
# installs ring as the process default at construction (see Client::new).
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "json",
    "query",
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Async sleep for retry backoff (retries feature). reqwest already pulls tokio
# with its time feature enabled, so this adds no new crates to the tree.
tokio = { version = "1", default-features = false, features = ["time"], optional = true }
# webhook-verify only. ring is already compiled in as rustls's crypto provider,
# so this adds no new C toolchain; base64 has no transitive deps.
ring = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

# The webhook example needs the verification helpers.
[[example]]
name = "webhook"
required-features = ["webhook-verify"]

[package.metadata.docs.rs]
all-features = true
# Enables the `docsrs` cfg so feature-gated items render their "available on
# feature X" badge (see the #[cfg_attr(docsrs, doc(cfg(...)))] attributes).
rustdoc-args = ["--cfg", "docsrs"]
